Refactor Cargo.toml to use workspace structure
Removed shell script content and added workspace configuration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,103 +1,53 @@
-#!/bin/bash
-set -e
+[workspace]
+resolver = "2"
+members = [
+    "crates/xpm-core",
+    "crates/xpm-alpm",
+    "crates/xpm-flatpak",
+    "crates/xpm-service",
+    "crates/xpm-ui",
+]
 
-SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-cd "$SCRIPT_DIR"
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+license = "GPL-3.0-or-later"
+authors = ["xPackageManager Contributors"]
+repository = "https://github.com/example/xpackagemanager"
 
-RED='\033[0;31m'
-GREEN='\033[0;32m'
-BLUE='\033[0;34m'
-CYAN='\033[0;36m'
-BOLD='\033[1m'
-NC='\033[0m'
+[workspace.dependencies]
+# Async runtime
+tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "sync", "macros"] }
+async-trait = "0.1"
 
-print_info() { echo -e "${BLUE}[INFO]${NC} $1"; }
-print_success() { echo -e "${GREEN}[SUCCESS]${NC} $1"; }
-print_error() { echo -e "${RED}[ERROR]${NC} $1"; }
+# UI Framework - Slint
+slint = { version = "1.9", default-features = false, features = ["backend-qt", "backend-winit", "renderer-femtovg", "compat-1-2"] }
 
-echo -e "${CYAN}${BOLD}"
-echo "╔════════════════════════════════════════════════════════════╗"
-echo "║          xPackageManager — CyberXero Edition               ║"
-echo "╚════════════════════════════════════════════════════════════╝"
-echo -e "${NC}"
+# Package manager backends
+alpm = "5.0"
+libflatpak = "0.7"
 
-if [ "$EUID" -eq 0 ]; then
-    print_error "Do not run as root. The script will request sudo when needed."
-    exit 1
-fi
+# Error handling
+thiserror = "2.0"
+anyhow = "1.0"
 
-if [ ! -f /etc/arch-release ] && ! command -v pacman &> /dev/null; then
-    print_error "This script is for Arch-based systems only."
-    exit 1
-fi
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
-print_info "Installing dependencies..."
-sudo pacman -S --needed --noconfirm rust qt6-base qt6-declarative pacman flatpak
+# Logging
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
-print_info "Building xPackageManager (this may take a few minutes)..."
-cargo build --release
-if [ $? -ne 0 ]; then
-    print_error "Build failed!"
-    exit 1
-fi
+# Internal crates
+xpm-core = { path = "crates/xpm-core" }
+xpm-alpm = { path = "crates/xpm-alpm" }
+xpm-flatpak = { path = "crates/xpm-flatpak" }
+xpm-service = { path = "crates/xpm-service" }
 
-print_info "Installing to /opt/xpackagemanager/..."
-sudo mkdir -p /opt/xpackagemanager
-sudo install -Dm755 target/release/xpackagemanager /opt/xpackagemanager/xpackagemanager
-sudo ln -sf /opt/xpackagemanager/xpackagemanager /usr/bin/xpackagemanager
-
-print_info "Installing desktop entry..."
-sudo tee /usr/share/applications/xpackagemanager.desktop > /dev/null << 'EOF'
-[Desktop Entry]
-Name=xPackage Manager
-Comment=Modern package manager for Arch Linux
-Exec=xpackagemanager
-Icon=system-software-install
-Terminal=false
-Type=Application
-Categories=System;PackageManager;
-Keywords=package;manager;pacman;flatpak;
-EOF
-
-print_info "Installing MIME type..."
-sudo tee /usr/share/mime/packages/x-alpm-package.xml > /dev/null << 'EOF'
-<?xml version="1.0" encoding="UTF-8"?>
-<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
-  <mime-type type="application/x-alpm-package">
-    <comment>Arch Linux Package</comment>
-    <glob pattern="*.pkg.tar.zst"/>
-    <glob pattern="*.pkg.tar.xz"/>
-    <glob pattern="*.pkg.tar.gz"/>
-  </mime-type>
-</mime-info>
-EOF
-
-print_info "Installing polkit policy..."
-sudo tee /usr/share/polkit-1/actions/org.xpackagemanager.policy > /dev/null << 'EOF'
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE policyconfig PUBLIC
- "-//freedesktop//DTD PolicyKit Policy Configuration 1.0//EN"
- "http://www.freedesktop.org/standards/PolicyKit/1/policyconfig.dtd">
-<policyconfig>
-  <action id="org.xpackagemanager.pkexec">
-    <description>Run xPackageManager privileged operations</description>
-    <message>Authentication is required to manage packages</message>
-    <defaults>
-      <allow_any>auth_admin</allow_any>
-      <allow_inactive>auth_admin</allow_inactive>
-      <allow_active>auth_admin_keep</allow_active>
-    </defaults>
-    <annotate key="org.freedesktop.policykit.exec.path">/opt/xpackagemanager/xpackagemanager</annotate>
-  </action>
-</policyconfig>
-EOF
-
-print_info "Updating system databases..."
-sudo update-desktop-database /usr/share/applications 2>/dev/null || true
-sudo update-mime-database /usr/share/mime 2>/dev/null || true
-
-echo ""
-print_success "xPackageManager installed!"
-echo ""
-echo -e "${BOLD}Launch:${NC} xpackagemanager or from Application Menu"
-echo ""
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+strip = true
+panic = "abort"
